2007-07-17  Yevgen Muntyan  <muntyan@tamu.edu>

	Attempt to fix usage of def:preprocessor style. def:preprocessor
	stays in, and is supposed to be used for "preprocessor things".
	Too late now to fix it, should have done it in convert.py a year ago.
	Added def:special-value style for things like TRUE and FALSE in C.

	* gtksourceview/language-specs/def.lang:
	* gtksourceview/language-specs/sql.lang:
	* gtksourceview/language-specs/javascript.lang:
	* gtksourceview/language-specs/po.lang:
	* gtksourceview/language-specs/ini.lang:
	* gtksourceview/language-specs/python.lang:
	* gtksourceview/language-specs/c.lang:
	* gtksourceview/language-specs/scheme.lang:
	* gtksourceview/language-specs/texinfo.lang:
	* gtksourceview/language-specs/tango.xml:
	* gtksourceview/language-specs/gtkrc.lang:
	* gtksourceview/language-specs/gvim.xml:
	* gtksourceview/language-specs/css.lang:
	* gtksourceview/language-specs/perl.lang:
	* gtksourceview/language-specs/kate.xml:
	* gtksourceview/language-specs/java.lang:
	* gtksourceview/language-specs/octave.lang:
	See above.

	* gtksourceview/language-specs/pkgconfig.lang:
	Added comments.

	* gtksourceview/language-specs/testfiles.sh:
	A script which outputs bunch of files using different languages,
	to quick-test whether parsing/highlighting broke.

2007-07-17  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcelanguage.c (_gtk_source_language_new_from_file),
	(gtk_source_language_dispose):
	* gtksourceview/gtksourcestylescheme.c (gtk_source_style_scheme_get_style):
	cast pointer to a pointer to a pointer, so gcc strict aliasing thing is
	fooled by implicit conversion from a pointer to a pointer to a pointer.

	* gtksourceview/gtksourcestylemanager.c:
	(build_reference_chain): use g_warning instead of g_message;
	(slist_to_strv): don't cast void* to char*;
	(gtk_source_style_manager_set_search_path): free priv->search_path after
	setting it, so it won't break on set_search_path(get_search_path()).
