@@ -1,3 +1,7 @@
+2007-07-17  Paolo Maggi  <paolo@gnome.org>
+
+	* gtksourceview/language-specs/testfiles.sh: generate file.spec
+	
 2007-07-17  Yevgen Muntyan  <muntyan@tamu.edu>
 
 	Attempt to fix usage of def:preprocessor style. def:preprocessor
